--- a/_posts/2024-01-10-talk.md
+++ b/_posts/2024-01-10-talk.md
@@ -9,4 +9,6 @@ math: true
 mermaid: true
 ---
 
-Our team member Sirui Ding gave a talk at SBMI on 2024/1/10. The topic is: Towards Precise and Equitable Organ Transplant with Machine learning.
+Our team member Sirui Ding gave a talk at SBMI on 2024/1/10.
+
+The topic is: Towards Precise and Equitable Organ Transplant with Machine learning.
