--- a/_posts/2024-01-31-event.md
+++ b/_posts/2024-01-31-event.md
@@ -11,6 +11,6 @@ mermaid: true
 
 ![event](/assets/img/activities/event131.png)
 
-Our team member Dr. Cheryl Brown attended the National Academies event, The Use of Race and Ethnicity in Biomedical Research - Meeting 3, a meeting focus on race and disparities from different disciplines.
+Our team member Dr. Cheryl Brown attended the National Academies event, The Use of Race and Ethnicity in Biomedical Research - Meeting 3, a meeting focused on race and disparities from different disciplines.
 
 The event details and recording can be found [here](https://www.nationalacademies.org/event/41676_01-2024_the-use-of-race-and-ethnicity-in-biomedical-research-meeting-3?medium=email&source=1hour&eventID=148578&ID=33677403).
