--- a/_posts/2024-03-26-workshop.md
+++ b/_posts/2024-03-26-workshop.md
@@ -13,7 +13,7 @@ mermaid: true
 
 ## Webinar Details
 + Date: April 23, 2024
-+ Venue: BioScience Research Collaborative (BRC) at Rice University | 6500 Main Street, Houston, TX 77030
++ Venue: BioScience Research Collaborative (BRC) at Rice University
 
 ## Workshop Introduction
 Ensuring equitable health outcomes requires that the design, development, implementation, and dissemination of technology is culturally and contextually informed and guided by people’s lived experiences through community-engaged science. The pandemic exposed and, in some cases, widened existing gaps for historically marginalized and underrepresented communities and inequities exist across all layers of the healthcare system – from access and use of technologies to policies and procedures. Addressing health equity issues among historically marginalized communities requires innovative collaborations across diverse disciplines (medicine, public health, nursing, engineering, social sciences, humanities, liberal arts, policy) and a global perspective. The goal of this workshop is to bring together scientists and clinicians working on health equity research to facilitate new collaborations and identify a shared research agenda across disciplines. The workshop will cover a broad range of topics in health equity including: 1. accessible healthcare technologies, 2. racial/ethnic/social determinants of health, 3. fairness in machine learning, 4. explainability in machine learning.
@@ -21,5 +21,3 @@ Ensuring equitable health outcomes requires that the design, development, implem
 Our members Dr. Hu and Dr. Zou will become invited speakers!
 
 [Click here to get more information and register](https://dhi.rice.edu/health-equity-workshop).
-
-![host](/assets/img/activities/2402webinarhost.png)
