changed the title of an activity

--- a/_posts/2024-03-21-talk2403.md
+++ b/_posts/2024-03-21-talk2403.md
@@ -1,5 +1,5 @@
 ---
-title: Dr. Hu Presented at Yale University
+title: Dr. Hu Gave a Talk at Yale University
 author: heart
 date: 2024-03-21 10:00:00 -0600
 categories: [Activity]
@@ -11,6 +11,6 @@ mermaid: true
 
 ![flyer](/assets/img/activities/talk2403.png)
 
-Our member Dr. Hu gave a presentation at Yale University's Biomedical Informatics & Data Science Monthly Seminar!
+Our member Dr. Hu gave a talk at Yale University's Biomedical Informatics & Data Science Monthly Seminar!
 
 [Click here to get more information](https://medicine.yale.edu/biomedical-informatics-data-science/event/bids-monthly-seminar-series-dr-xia-ben-hu/).
