add workshop news

--- a/_posts/2024-03-27-webinar2403.md
+++ b/_posts/2024-03-27-webinar2403.md
@@ -3,11 +3,13 @@ title: AI-CARES Seminar 2 with Dr. Deborah Guadalupe Duran
 author: heart
 date: 2024-03-27 10:00:00 -0600
 categories: [Activity]
-tags: [news]
+tags: [students]
 pin: true
 math: true
 mermaid: true
 ---
+
+Our research assitant Tracy Asibu attended the seminar.
 
 ## Webinar Topic
 Data-driven Solutions for Health Equity: NIMHD ScHARe Resources and Opportunities
