--- a/_posts/2024-03-26-workshop0423.md
+++ b/_posts/2024-03-26-workshop0423.md
@@ -1,5 +1,5 @@
 ---
-title: Upcoming Health Equity Workshop
+title: Health Equity Workshop Presentations
 author: heart
 date: 2024-04-23 10:00:00 -0600
 categories: [Activity]
