add students tag to a post

--- a/_posts/2024-03-15-event03.md
+++ b/_posts/2024-03-15-event03.md
@@ -3,12 +3,12 @@ title: Dr. Brown Attended the Duke Symposium on Fostering AI/ML Research for Hea
 author: heart
 date: 2024-03-15 14:00:00 -0600
 categories: [Activity]
-tags: [news]
+tags: [news, students]
 pin: true
 math: true
 mermaid: true
 ---
 
-Our team member Dr. Cheryl Brown attended the Duke Symposium on Fostering AI/ML Research for Health Equity and Learning Transformation (FAIR HEALTH™).
+Our team member Dr. Cheryl Brown attended the Duke Symposium on Fostering AI/ML Research for Health Equity and Learning Transformation (FAIR HEALTH™). One of our research assistants, Taniyah, also attended it.
 
 The event details can be found [here](https://aihealth.duke.edu/2024-fair-health-symposium/).
