--- a/_posts/2024-03-15-event03.md
+++ b/_posts/2024-03-15-event03.md
@@ -1,14 +1,27 @@
 ---
-title: Dr. Brown Attended the Duke Symposium on Fostering AI/ML Research for Health Equity and Learning Transformation (FAIR HEALTH™)
+title: Our Research Assistant, Taniyah Pruitt, Attended the Duke Symposium on Fostering AI/ML Research for Health Equity and Learning Transformation (FAIR HEALTH™)
 author: heart
 date: 2024-03-15 14:00:00 -0600
 categories: [Activity]
-tags: [news, students]
+tags: [students]
 pin: true
 math: true
 mermaid: true
 ---
 
-Our team member Dr. Cheryl Brown attended the Duke Symposium on Fostering AI/ML Research for Health Equity and Learning Transformation (FAIR HEALTH™). One of our research assistants, Taniyah, also attended it.
+Our research assistant, Taniyah attended the Duke Symposium on Fostering AI/ML Research for Health Equity and Learning Transformation (FAIR HEALTH™).
+
+## Keynote Speakers:
+
++ Lisa S. Lehmann, PhD, MD.
++ Maia Hightower, MD, MPH, MBA.
+
+## Event Highlights:
+
++ Presentations: Thought-provoking content featuring experts from healthcare, ethics, education, policy, all sharing insights on the challenges and opportunities in achieving algorithmic equity.
+
++ Interactive Breakout Sessions: Participate in breakouts designed to facilitate discussions on the problems and gaps, but more importantly the proposed solutions for implementing fairness and equity in algorithmic processes.
+
++ Networking Opportunities: Connect with industry professionals, researchers, clinicians, and students passionate about the intersection of healthcare, technology, ethics, and fairness.
 
 The event details can be found [here](https://aihealth.duke.edu/2024-fair-health-symposium/).
